--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,24 +3,35 @@ name: Deploy FlavorFlux Frontend to GitHub Pages
 on:
   push:
     branches:
-      - main
+      - main # deploys whenever you push to main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Checkout the repo
       - uses: actions/checkout@v3
+
+      # 2️⃣ Set up Node.js
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "18"
+
+      # 3️⃣ Install dependencies
       - name: Install dependencies
         run: npm ci
+
+      # 4️⃣ Build the project
       - name: Build
         run: npm run build
+
+      # 5️⃣ Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+          commit_user_name: "github-actions[bot]"
+          commit_user_email: "github-actions[bot]@users.noreply.github.com"
