Fix GitHub Pages deployment with force orphan

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,31 +3,26 @@ name: Deploy FlavorFlux Frontend to GitHub Pages
 on:
   push:
     branches:
-      - main # deploy whenever you push to main
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout the repo
       - uses: actions/checkout@v3
 
-      # 2️⃣ Set up Node.js
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "18"
 
-      # 3️⃣ Install dependencies
       - name: Install dependencies
         run: npm ci
 
-      # 4️⃣ Build the project
       - name: Build
         run: npm run build
 
-      # 5️⃣ Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
@@ -35,3 +30,4 @@ jobs:
           publish_dir: ./dist
           user_name: "github-actions[bot]"
           user_email: "github-actions[bot]@users.noreply.github.com"
+          force_orphan: true
